<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp">

    <ImageView
        android:id="@+id/iv_player_picture"
        android:layout_width="@dimen/profile_dimen"
        android:layout_height="@dimen/profile_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="16dp"
        android:contentDescription="@string/profile_picture_description"
        android:src="@drawable/ic_baseline_person" />

    <TextView
        android:id="@+id/tv_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_player_picture"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/name_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_player_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_name_label"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="8dp"/>

    <TextView
        android:id="@+id/tv_position_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name_label"
        app:layout_constraintStart_toStartOf="@id/tv_name_label"
        android:layout_marginVertical="24dp"
        android:text="@string/position_label"
        android:textSize="20sp"/>
    <Spinner
        android:id="@+id/spinner_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/position_list"
        android:background="@android:color/background_light"
        app:layout_constraintStart_toEndOf="@id/tv_position_label"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_position_label"
        android:layout_marginHorizontal="8dp"/>

    <EditText
        android:id="@+id/et_player_price"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/spinner_position"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_position_label"
        android:hint="@string/enter_price_hint"
        android:inputType="numberDecimal"
        android:layout_marginStart="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/et_player_price"
        app:layout_constraintBaseline_toBaselineOf="@id/et_player_price"
        android:layout_marginEnd="16dp"
        android:text="@string/dollar_sign"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_player_rating"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/et_player_name"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_position_label"
        android:hint="@string/enter_rating_hint"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_position_label"
        android:layout_marginVertical="16dp"
        android:text="@string/confirm_label"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_position_label"
        android:layout_marginVertical="32dp"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>